--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="description">Description</string>
     <string name="title">Title</string>
     <string name="circle">Circle</string>
+    <string name="users">Users</string>
 
 
 </resources>
