--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,21 @@
     <string name="circle">Circle</string>
     <string name="users">Users</string>
     <string name="items_remaining">items remaining</string>
+    <string name="search">Search</string>
+    <string name="total">Total</string>
+    <string name="_0">0</string>
+    <string name="removeitem">removeItem</string>
+    <string name="addItem">addItem</string>
+    <string name="checkout">Checkout</string>
+    <string name="order">Order</string>
+    <string name="title_activity_buy_orders">BuyOrders</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
 </resources>
