--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="mobile_number">Mobile Number</string>
     <string name="logout">Logout</string>
     <string name="code">Code</string>
-    <string name="to_be_filled" />
+    <string name="to_be_filled">-</string>
     <string name="dismiss">Dismiss</string>
     <string name="resend_verification">Resend Email</string>
     <string name="verify_to_continue">Verify your Account to continue</string>
@@ -55,6 +55,7 @@
     <string name="media_channel_description">This is to notify you about relevant media in app</string>
     <string name="user_channel_description">This is to notify you about relevant activity related to you</string>
     <string name="synch_notification_description">To show you when synchronization is occurring</string>
+
     <string name="description">Description</string>
     <string name="title">Title</string>
     <string name="circle">Circle</string>
@@ -75,6 +76,15 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="jobs">Jobs</string>
+    <string name="location">Location</string>
+    <string name="select_delivery_location">Select delivery location</string>
+    <string name="choose_location_of_supply">Choose location of supply</string>
+    <string name="buyer_name">Buyer name</string>
+    <string name="accept">Accept</string>
+    <string name="more">More</string>
+    <string name="items">Items</string>
+    <string name="proceed">Proceed</string>
 
 
 </resources>
